--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/bioextractor-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/bioextractor-dep.yaml
@@ -24,11 +24,21 @@ spec:
         app: {{ .Values.services.bioextractor.serviceName }} 
         component: {{ .Values.component }} 
     spec:
+      serviceAccountName: {{ .Values.service_account }}
+      securityContext:
+        runAsUser: {{ .Values.podUserId }}
+        runAsGroup: {{ .Values.podUserGid }}
+      {{- include "logger.volume" .  | indent 6}}
       {{- include "dockerHubSecret" .  | indent 6}}
       containers:
       - name: {{ .Values.services.bioextractor.serviceName }} 
         image: {{ .Values.services.bioextractor.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
+        securityContext:
+          runAsUser: {{ .Values.containerUserId }}
+          runAsGroup: {{ .Values.containerUserGid }}
+          allowPrivilegeEscalation: false
+        {{- include "logger.mount" .  | indent 8}}
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
@@ -45,7 +55,7 @@ spec:
         ports:
         - containerPort: {{ .Values.services.bioextractor.containerPort }}
 
-        {{- include "logger.mount" .  | indent 8}}
+#        {{- include "logger.mount" .  | indent 8}}
 
         readinessProbe:
           httpGet:
@@ -62,4 +72,4 @@ spec:
  #
       {{- include "logger.sidecar" .  | indent 6}}
 
-      {{- include "logger.volume" .  | indent 6}}
+ #     {{- include "logger.volume" .  | indent 6}}
