--- a/deployment/sandbox-v2/helm/charts/activemq/templates/activemq-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/activemq/templates/activemq-dep.yaml
@@ -20,9 +20,19 @@ spec:
       labels:
         app: {{ .Values.name }}
     spec:
+      serviceAccountName: {{ .Values.service_account }}
+      securityContext:
+        runAsUser: {{ .Values.podUserId }}
+        runAsGroup: {{ .Values.podUserGid }}
+      {{- include "logger.volume" .  | indent 6}}
       containers:
       - name: {{ .Values.name }}
         image: {{ .Values.docker.image }}
+        securityContext:
+          runAsUser: {{ .Values.containerUserId }}
+          runAsGroup: {{ .Values.containerUserGid }}
+          allowPrivilegeEscalation: false
+        {{- include "logger.mount" .  | indent 8}}
         env:
         - name: ACTIVEMQ_CONFIG_MINMEMORY
           value: {{ .Values.docker.minmemory }}
