--- a/deployment/sandbox-v2/helm/charts/clamav/templates/clamav-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/clamav/templates/clamav-dep.yaml
@@ -20,9 +20,19 @@ spec:
       labels:
         app: {{ .Values.name }} 
     spec:
+      serviceAccountName: {{ .Values.service_account }}
+      securityContext:
+        runAsUser: {{ .Values.podUserId }}
+        runAsGroup: {{ .Values.podUserGid }}
+      {{- include "logger.volume" .  | indent 6}}
       containers:
       - name: {{  .Values.name }}
         image: {{ .Values.docker.image }}
+        securityContext:
+          runAsUser: {{ .Values.containerUserId }}
+          runAsGroup: {{ .Values.containerUserGid }}
+          allowPrivilegeEscalation: false
+        {{- include "logger.mount" .  | indent 8}}
         ports:
         - containerPort: {{ .Values.docker.containerPort }}
         readinessProbe:
