--- a/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/internal-dep.yaml
@@ -24,6 +24,11 @@ spec:
         app: {{ .Values.services.internal.serviceName }} 
         component: {{ .Values.component }} 
     spec:
+      serviceAccountName: {{ .Values.service_account }}
+      securityContext:
+        runAsUser: {{ .Values.podUserId }}
+        runAsGroup: {{ .Values.podUserGid }}
+      {{- include "logger.volume" .  | indent 6}}
       {{- include "dockerHubSecret" .  | indent 6}}
       initContainers:  # TODO: Temporarily added as a workaround. Duplicate key issue. 
       - name: wait-for-auth
@@ -33,6 +38,11 @@ spec:
       - name: {{ .Values.services.internal.serviceName }} 
         image: {{ .Values.services.internal.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
+        securityContext:
+          runAsUser: {{ .Values.containerUserId }}
+          runAsGroup: {{ .Values.containerUserGid }}
+          allowPrivilegeEscalation: false
+        {{- include "logger.mount" .  | indent 8}}
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
@@ -49,7 +59,7 @@ spec:
         ports:
         - containerPort: {{ .Values.services.internal.containerPort }}
 
-        {{- include "logger.mount" .  | indent 8}}
+#        {{- include "logger.mount" .  | indent 8}}
 
         readinessProbe:
           httpGet:
@@ -66,4 +76,4 @@ spec:
 #
       {{- include "logger.sidecar" .  | indent 6}}
 
-      {{- include "logger.volume" .  | indent 6}}
+#      {{- include "logger.volume" .  | indent 6}}
