--- a/deployment/sandbox-v2/helm/charts/keycloak/templates/keycloak-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/keycloak/templates/keycloak-dep.yaml
@@ -22,9 +22,19 @@ spec:
       labels:
         app: {{ .Values.name }}
     spec:
+      serviceAccountName: {{ .Values.service_account }}
+      securityContext:
+        runAsUser: {{ .Values.podUserId }}
+        runAsGroup: {{ .Values.podUserGid }}
+      {{- include "logger.volume" .  | indent 6}}
       containers:
       - name: {{ .Values.name }}
         image: {{ .Values.dockerImage }}:{{ .Values.dockerTag }} 
+        securityContext:
+          runAsUser: {{ .Values.containerUserId }}
+          runAsGroup: {{ .Values.containerUserGid }}
+          allowPrivilegeEscalation: false
+        {{- include "logger.mount" .  | indent 8}}
         env:
         - name: KEYCLOAK_USER 
           value: {{ .Values.keycloakUser }}
