--- a/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-dep.yaml
@@ -21,9 +21,19 @@ spec:
       labels:
         app: {{ .Values.serviceName }} 
     spec:
+      serviceAccountName: {{ .Values.service_account }}
+      securityContext:
+        runAsUser: {{ .Values.podUserId }}
+        runAsGroup: {{ .Values.podUserGid }}
+      {{- include "logger.volume" .  | indent 6}}
       containers:
       - name: {{ .Values.serviceName }} 
         image: {{ .Values.docker.image }}:{{ .Values.docker.tag }} 
+        securityContext:
+          runAsUser: {{ .Values.containerUserId }}
+          runAsGroup: {{ .Values.containerUserGid }}
+          allowPrivilegeEscalation: false
+        {{- include "logger.mount" .  | indent 8}}
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
