--- a/deployment/sandbox-v2/playbooks/psp-apply.yml
+++ b/deployment/sandbox-v2/playbooks/psp-apply.yml
@@ -6,7 +6,7 @@
     helm_chart: '{{charts_root}}/psp'
     is_template: true
     helm_namespace: 'default'
-    helm_values: '{{charts_root}}/psp/values.yaml'
+    helm_values: '{{charts_root}}/psp/values.template.j2'
     helm_strings: ''
   roles:
     - {role:  helm}
