--- a/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
@@ -42,6 +42,8 @@ spec:
           value: {{ .Values.isGlowroot }} 
         - name: PKCS11_PROXY_SOCKET
           value: {{ .Values.services.key.hsmUrl }} 
+        - name: iam_adapter_url_env
+          value: {{ .Values.iamAdapterUrl }}
         ports:
         - containerPort: {{ .Values.services.key.containerPort }}
         readinessProbe:
