--- a/deployment/sandbox-v2/helm/charts/kernel/templates/rid-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/rid-dep.yaml
@@ -40,6 +40,8 @@ spec:
           value: {{ .Values.artifactoryUrl }} 
         - name: is_glowroot_env
           value: {{ .Values.isGlowroot }} 
+        - name: iam_adapter_url_env
+          value: {{ .Values.iamAdapterUrl }}
         ports:
         - containerPort: {{ .Values.services.rid.containerPort }}
         readinessProbe:
