--- a/deployment/sandbox-v2/helm/charts/regproc/templates/print-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/print-dep.yaml
@@ -39,6 +39,8 @@ spec:
           value: {{ .Values.artifactoryUrl }} 
         - name: is_glowroot_env
           value: {{ .Values.isGlowroot }}
+        - name: mosipbox_public_url
+          value: {{ .Values.sitePublicUrl }}
         ports:
         - name: eventbus-port
           containerPort: {{ .Values.services.print.ports.eventbusPort }}
