--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -56,6 +56,11 @@ keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any cli
   - {realm_id: 'mosip', client_id: '', role_name: 'CREDENTIAL_REQUEST'}
   - {realm_id: 'mosip', client_id: '', role_name: 'CREATE_SHARE'}
   - {realm_id: 'mosip', client_id: '', role_name: 'MASTERDATA_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'PARTNER_ADMIN'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'AUTH_PARTNER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'CREDENTIAL_PARTNER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'FTM_PROVIDER'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'PMS_USER'}
 
 keycloak_mosip_users: # Assumption "username.json" exists with same username inside 
   - {realm_id: 'mosip', user_file: 'users/testuser.json'}
@@ -251,6 +256,8 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: '110124', role_name: 'MISP'}
   - {realm_id: 'mosip', username: '110124', role_name: 'POLICYMANAGER'}
   - {realm_id: 'mosip', username: '110124', role_name: 'PARTNERMANAGER'}
+  - {realm_id: 'mosip', username: '110124', role_name: 'PARTNER_ADMIN'}
+  - {realm_id: 'mosip', username: '110124', role_name: 'PMS_USER'}
 
   - {realm_id: 'mosip', username: '110118', role_name: 'PARTNER'}
   - {realm_id: 'mosip', username: '110118', role_name: 'MISP'}
