mosipbox_public_url passed as env variable in idrepo.

--- a/deployment/sandbox-v2/helm/charts/idrepo/templates/bioextractor-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/idrepo/templates/bioextractor-dep.yaml
@@ -42,6 +42,8 @@ spec:
           value: {{ .Values.isGlowroot }}
         - name: extraction_format_env
           value: {{ .Values.extraction_format }}
+        - name: mosipbox_public_url
+          value: {{ .Values.sitePublicUrl }}
         ports:
         - containerPort: {{ .Values.services.bioextractor.containerPort }}
 
