--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -25,6 +25,7 @@
 - import_playbook: playbooks/config-server.yml    
 - import_playbook: playbooks/kernel.yml
 - import_playbook: playbooks/packetmanager.yml
+- import_playbook: playbooks/datashare.yml
 - import_playbook: playbooks/prereg.yml
 - import_playbook: playbooks/regproc.yml
 - import_playbook: playbooks/ida.yml
