[MOSIP-9567] deleted bio dedup service and added iam_adapter_url change in transaction service

--- a/deployment/sandbox-v2/helm/charts/regproc/templates/trans-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/trans-dep.yaml
@@ -39,6 +39,8 @@ spec:
           value: {{ .Values.isGlowroot }}
         - name: mosipbox_public_url
           value: {{ .Values.sitePublicUrl }}
+        - name: iam_adapter_url_env
+          value: {{ .Values.iamAdapterUrl }}
         ports:
         - name: verticle-port
           containerPort: {{ .Values.services.trans.ports.containerPort }}
