--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -4,131 +4,131 @@ versions:
 
     kernel:
       auth:
-        'kernel-auth-service':  'mosipdev/kernel-auth-service:develop'
+        'kernel-auth-service':  'mosipdev/kernel-auth-service:1.1.2'
       masterdata:
-        'kernel-masterdata-service': 'mosipdev/kernel-masterdata-service:develop'
+        'kernel-masterdata-service': 'mosipdev/kernel-masterdata-service:1.1.2'
       idgen:
-        'kernel-idgenerator-service': 'mosipdev/kernel-idgenerator-service:develop'
+        'kernel-idgenerator-service': 'mosipdev/kernel-idgenerator-service:1.1.2'
       prid:
-        'kernel-pridgenerator-service': 'mosipdev/kernel-pridgenerator-service:develop'
+        'kernel-pridgenerator-service': 'mosipdev/kernel-pridgenerator-service:1.1.2'
       sync:
-        'kernel-syncdata-service': 'mosipdev/kernel-syncdata-service:develop'
+        'kernel-syncdata-service': 'mosipdev/kernel-syncdata-service:1.1.2'
       audit :
-        'kernel-auditmanager-service': 'mosipdev/kernel-auditmanager-service:develop'
+        'kernel-auditmanager-service': 'mosipdev/kernel-auditmanager-service:1.1.2'
       key:
-        'kernel-keymanager-service': 'mosipdev/kernel-keymanager-service:develop'
+        'kernel-keymanager-service': 'mosipdev/kernel-keymanager-service:1.1.2'
       notifier:
-        'kernel-notification-service': 'mosipdev/kernel-notification-service:develop'
+        'kernel-notification-service': 'mosipdev/kernel-notification-service:1.1.2'
       otp:
-        'kernel-otpmanager-service': 'mosipdev/kernel-otpmanager-service:develop'
+        'kernel-otpmanager-service': 'mosipdev/kernel-otpmanager-service:1.1.2'
       rid:
-        'kernel-ridgenerator-service': 'mosipdev/kernel-ridgenerator-service:develop'
+        'kernel-ridgenerator-service': 'mosipdev/kernel-ridgenerator-service:1.1.2'
       keygen:
-        'kernel-keys-generator': 'mosipdev/keys-generator:develop'
+        'kernel-keys-generator': 'mosipdev/keys-generator:1.1.2'
 
     prereg:
       application:
-        'prereg-application-service': 'mosipdev/pre-registration-application-service:develop'
+        'prereg-application-service': 'mosipdev/pre-registration-application-service:1.1.2'
       batch:
-        'prereg-batchjob-service': 'mosipdev/pre-registration-batchjob:develop'
+        'prereg-batchjob-service': 'mosipdev/pre-registration-batchjob:1.1.2'
       booking:
-        'prereg-booking-service': 'mosipdev/pre-registration-booking-service:develop'
+        'prereg-booking-service': 'mosipdev/pre-registration-booking-service:1.1.2'
       datasync:
-        'prereg-datasync-service': 'mosipdev/pre-registration-datasync-service:develop'
+        'prereg-datasync-service': 'mosipdev/pre-registration-datasync-service:1.1.2'
       captcha:
-        'prereg-captcha-service': 'mosipdev/pre-registration-captcha-service:develop'
+        'prereg-captcha-service': 'mosipdev/pre-registration-captcha-service:1.1.2'
       ui:
-        'prereg-ui': 'mosipdev/pre-registration-ui:develop'
+        'prereg-ui': 'mosipdev/pre-registration-ui:1.1.2'
       
     registration:
       client:
-        'reg-client-downloader': 'mosipdev/registration-client:develop'
+        'reg-client-downloader': 'mosipdev/registration-client:1.1.2'
 
     regproc:
       camel:
-        'regproc-camel-stage': 'mosipdev/registration-processor-common-camel-bridge:develop'
+        'regproc-camel-stage': 'mosipdev/registration-processor-common-camel-bridge:1.1.2'
       notification: 
-        'regproc-securezone-notification-stage': 'mosipdev/registration-processor-securezone-notification-stage:develop'
+        'regproc-securezone-notification-stage': 'mosipdev/registration-processor-securezone-notification-stage:1.1.2'
       uploader:
-        'regproc-packet-uploader-stage': 'mosipdev/registration-processor-packet-uploader-stage:develop'
+        'regproc-packet-uploader-stage': 'mosipdev/registration-processor-packet-uploader-stage:1.1.2'
       quality:
-        'regproc-quality-checker-stage': 'mosipdev/registration-processor-quality-checker-stage:develop'
+        'regproc-quality-checker-stage': 'mosipdev/registration-processor-quality-checker-stage:1.1.2'
       validator:
-        'regproc-packet-validator-stage': 'mosipdev/registration-processor-packet-validator-stage:develop'
+        'regproc-packet-validator-stage': 'mosipdev/registration-processor-packet-validator-stage:1.1.2'
       osi:
-        'regproc-osi-validator-stage': 'mosipdev/registration-processor-osi-validator-stage:develop'
+        'regproc-osi-validator-stage': 'mosipdev/registration-processor-osi-validator-stage:1.1.2'
       demo:
-        'regproc-demo-dedupe-stage': 'mosipdev/registration-processor-demo-dedupe-stage:develop'
+        'regproc-demo-dedupe-stage': 'mosipdev/registration-processor-demo-dedupe-stage:1.1.2'
       bio:
-        'regproc-bio-dedupe-stage': 'mosipdev/registration-processor-bio-dedupe-stage:develop'
+        'regproc-bio-dedupe-stage': 'mosipdev/registration-processor-bio-dedupe-stage:1.1.2'
       bioauth:
-        'regproc-biometric-authentication-stage': 'mosipdev/registration-processor-biometric-authentication-stage:develop'
+        'regproc-biometric-authentication-stage': 'mosipdev/registration-processor-biometric-authentication-stage:1.1.2'
       abishandler:
-        'regproc-abis-handler-stage': 'mosipdev/registration-processor-abis-handler-stage:develop'
+        'regproc-abis-handler-stage': 'mosipdev/registration-processor-abis-handler-stage:1.1.2'
       abismid:
-        'regproc-abis-middleware-stage': 'mosipdev/registration-processor-abis-middleware-stage:develop'
+        'regproc-abis-middleware-stage': 'mosipdev/registration-processor-abis-middleware-stage:1.1.2'
       proxyabis:
-        'regproc-proxy-abis': 'mosipdev/registration-processor-abis:develop'
+        'regproc-proxy-abis': 'mosipdev/registration-processor-abis:1.1.2'
       manual:
-        'regproc-manual-verification-stage': 'mosipdev/registration-processor-manual-verification-stage:develop'
+        'regproc-manual-verification-stage': 'mosipdev/registration-processor-manual-verification-stage:1.1.2'
       external:
-        'regproc-external-stage': 'mosipdev/registration-processor-external-stage:develop'
+        'regproc-external-stage': 'mosipdev/registration-processor-external-stage:1.1.2'
       eis: 
-        'regproc-external-integration-service': 'mosipdev/registration-processor-external-integration-service:develop'
+        'regproc-external-integration-service': 'mosipdev/registration-processor-external-integration-service:1.1.2'
       uin:
-        'regproc-uin-generator-stage': 'mosipdev/registration-processor-uin-generator-stage:develop'
+        'regproc-uin-generator-stage': 'mosipdev/registration-processor-uin-generator-stage:1.1.2'
       msg:
-        'regproc-message-sender-stage': 'mosipdev/registration-processor-message-sender-stage:develop'
+        'regproc-message-sender-stage': 'mosipdev/registration-processor-message-sender-stage:1.1.2'
       print:
-        'regproc-printing-stage': 'mosipdev/registration-processor-printing-stage:develop'
+        'regproc-printing-stage': 'mosipdev/registration-processor-printing-stage:1.1.2'
       printsvc:
-        'regproc-print-service': 'mosipdev/registration-processor-print-service:develop'
+        'regproc-print-service': 'mosipdev/registration-processor-print-service:1.1.2'
       trans:
-        'regproc-registration-transaction-service': 'mosipdev/registration-processor-registration-transaction-service:develop'
+        'regproc-registration-transaction-service': 'mosipdev/registration-processor-registration-transaction-service:1.1.2'
       reprocess:
-        'regproc-reprocessor-stage': 'mosipdev/registration-processor-reprocessor-stage:develop'
+        'regproc-reprocessor-stage': 'mosipdev/registration-processor-reprocessor-stage:1.1.2'
 
     dmzregproc:  
       receiver:
-        'regproc-packet-receiver-stage': 'mosipdev/registration-processor-packet-receiver-stage:develop'
+        'regproc-packet-receiver-stage': 'mosipdev/registration-processor-packet-receiver-stage:1.1.2'
       camel:
-        'regproc-camel-stage': 'mosipdev/registration-processor-common-camel-bridge:develop'
+        'regproc-camel-stage': 'mosipdev/registration-processor-common-camel-bridge:1.1.2'
       status:
-        'regproc-registration-status-service': 'mosipdev/registration-processor-registration-status-service:develop'
+        'regproc-registration-status-service': 'mosipdev/registration-processor-registration-status-service:1.1.2'
       pktserver:
         'regproc-dmz-packet-server': 'mosipdev/registration-processor-dmz-packet-server:1.0.9'
         
     ida:
       auth:
-        'ida-auth-service': 'mosipdev/authentication-service:develop'
+        'ida-auth-service': 'mosipdev/authentication-service:1.1.2'
       internal: 
-         'ida-internal-service': 'mosipdev/authentication-internal-service:develop'
+         'ida-internal-service': 'mosipdev/authentication-internal-service:1.1.2'
       kyc: 
-         'ida-kyc-service': 'mosipdev/authentication-kyc-service:develop'
+         'ida-kyc-service': 'mosipdev/authentication-kyc-service:1.1.2'
       otp: 
-         'ida-otp-service': 'mosipdev/authentication-otp-service:develop'
+         'ida-otp-service': 'mosipdev/authentication-otp-service:1.1.2'
       keygen:  
-        'ida-key-generator': 'mosipdev/keys-generator:develop'
+        'ida-key-generator': 'mosipdev/keys-generator:1.1.2'
 
     idrepo:
       identity:
-        'idrepo-identity-service': 'mosipdev/id-repository-identity-service:develop'
+        'idrepo-identity-service': 'mosipdev/id-repository-identity-service:1.1.2'
       vid: 
-        'idrepo-vid-service': 'mosipdev/id-repository-vid-service:develop'
+        'idrepo-vid-service': 'mosipdev/id-repository-vid-service:1.1.2'
       bioextractor:
-        'idrepo-bioextractor-service': 'mosipdev/bioextractor-service:develop'
+        'idrepo-bioextractor-service': 'mosipdev/bioextractor-service:1.1.2'
       credentialreq:
-        'idrepo-credential-request-generator': 'mosipdev/credential-request-generator:develop'
+        'idrepo-credential-request-generator': 'mosipdev/credential-request-generator:1.1.2'
       credentialservice:
-        'idrepo-credential-service': 'mosipdev/credential-service:develop'
+        'idrepo-credential-service': 'mosipdev/credential-service:1.1.2'
       uinhash:  
-        'idrepo-uin-hash-generator': 'mosipdev/kernel-salt-generator:develop'
+        'idrepo-uin-hash-generator': 'mosipdev/kernel-salt-generator:1.1.2'
       uinencrypt:
-        'idrepo-uin-encrypt-generator' :  'mosipdev/kernel-salt-generator:develop'
+        'idrepo-uin-encrypt-generator' :  'mosipdev/kernel-salt-generator:1.1.2'
       vidhash:
-        'idrepo-vid-hash-generator': 'mosipdev/kernel-salt-generator:develop'
+        'idrepo-vid-hash-generator': 'mosipdev/kernel-salt-generator:1.1.2'
       videncrypt:
-        'idrepo-vid-encrypt-generator': 'mosipdev/kernel-salt-generator:develop'
+        'idrepo-vid-encrypt-generator': 'mosipdev/kernel-salt-generator:1.1.2'
 
     pms:
       misp: 
@@ -143,18 +143,18 @@ versions:
 
     resident: 
       resident:  
-        'resident-service': 'mosipdev/resident-service:develop'
+        'resident-service': 'mosipdev/resident-service:1.1.2'
     
     admin:
       service:
-        'admin-service': 'mosipdev/admin-service:develop'
+        'admin-service': 'mosipdev/admin-service:1.1.2'
       ui:
-        'admin-ui': 'mosipdev/admin-ui:develop'
+        'admin-ui': 'mosipdev/admin-ui:1.1.2'
     
     packetmanager:
       service:
-        'packetmanager-service': 'mosipdev/commons-packet-service:develop'
+        'packetmanager-service': 'mosipdev/commons-packet-service:1.1.2'
 
     datashare:
       service:
-        'datashare-service': 'mosipdev/data-share-service:develop'
+        'datashare-service': 'mosipdev/data-share-service:1.1.2'
