--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -158,3 +158,7 @@ versions:
     datashare:
       service:
         'datashare-service': 'mosipdev/data-share-service:1.1.2'
+
+    print:
+      service:
+        'print-service': 'mosipdev/print:1.1.2'
