--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -33,5 +33,6 @@
 - import_playbook: playbooks/pms.yml
 - import_playbook: playbooks/resident.yml
 - import_playbook: playbooks/admin.yml
+- import_playbook: playbooks/print.yml
 # Regclient downloader
 - import_playbook: playbooks/reg-client-downloader.yml
