[MOSIP-9646] Instructions for configuring reg client to work with sandbox added along with keys.

--- a/deployment/sandbox-v2/roles/nginx/tasks/update_conf.yml
+++ b/deployment/sandbox-v2/roles/nginx/tasks/update_conf.yml
@@ -29,6 +29,13 @@
     state: link
   become: yes
 
+- name: Set symlink to regclient keys zip file
+  file: 
+    src: '{{install_root}}/tmp/regclientkeys.zip'
+    dest: '/usr/share/nginx/html/regclientkeys.zip'
+    state: link
+  become: yes
+
 - name: Restart nginx
   command: 'systemctl restart nginx'
   become: yes
