--- a/deployment/sandbox-v2/roles/reg-client-prep/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/reg-client-prep/tasks/main.yml
@@ -26,3 +26,14 @@
     path: '{{install_root}}/roles/reg-client-prep/files/regclientkeys/'
     dest: '{{tmp_dir}}/regclientkeys.zip'
     format: zip
+
+- name: Set symlink to regclient keys zip file
+  file: 
+    src: '{{install_root}}/tmp/regclientkeys.zip'
+    dest: '/usr/share/nginx/html/regclientkeys.zip'
+    state: link
+  become: yes
+
+- name: Restart nginx
+  command: 'systemctl restart nginx'
+  become: yes
