mosip-abis-client added in keycloak for abis integration testing.

--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -21,6 +21,7 @@ keycloak_mosip_clients:
   - {realm_id: 'mosip', client_id: 'mosip-crereq-client', secret: 'abc123'}
   - {realm_id: 'mosip', client_id: 'mosip-creser-client', secret: 'abc123'}
   - {realm_id: 'mosip', client_id: 'mosip-datsha-client', secret: 'abc123'}
+  - {realm_id: 'mosip', client_id: 'mosip-abis-client', secret: 'abc123'}
 
 keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any client)
   - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OFFICER'}
