[MOSIP-9702] Dynamic provisioning added for Elasticsearch Statefulset.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -236,7 +236,7 @@ databases:
 nfs:
   server: console.sb
   folder: /srv/nfs/mosip
-
+  provisioner: nfs-provisioner  # Name
 
 hdfs:
   install_name: hadoop
