[MOSIP-9794] Service name corrected for Websub.

--- a/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
+++ b/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
@@ -12,6 +12,6 @@ spec:
       paths:
       - path: /websub
         backend:
-          serviceName: {{ .Values.name }} 
+          serviceName: {{ .Values.services.serviceName }}
           servicePort: 80 
 
