--- a/deployment/sandbox-v2/helm/charts/websub/templates/websub-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/websub/templates/websub-svc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.name }}
+  name: {{ .Values.services.serviceName }}
   namespace: {{ .Release.Namespace }} 
 spec:
   selector:
-    app: {{ .Values.name }}
+    app: {{ .Values.services.serviceName }}
   ports:
     - port: {{ .Values.services.servicePort }} 
       targetPort: {{ .Values.hub.port }}
