--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-dep.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ .Values.services.pktserver.serviceName }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.services.pktserver.podconfig.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.services.pktserver.serviceName }} 
