--- a/deployment/sandbox-v2/helm/charts/regproc/templates/eis-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/eis-dep.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ .Values.services.eis.serviceName }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.services.eis.podconfig.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.services.eis.serviceName }} 
