--- a/deployment/sandbox-v2/helm/charts/regproc/templates/trans-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/regproc/templates/trans-dep.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ .Values.services.trans.serviceName }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.services.trans.podconfig.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.services.trans.serviceName }} 
