--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -9,6 +9,8 @@ logs_dir: '{{tmp_dir}}/logs'
 charts_root: '{{install_root}}/helm/charts'  # Helm charts root
 helm_cli_path: '{{user_home}}/bin'  # This path chosen as it is included in default $PATH in Centos 7.7
 artifactory_url: http://15.207.222.178/
+versions_file: '{{install_root}}/versions.yml' 
+podconfig_file: '{{install_root}}/podconfig.yml'
 
 sandbox_domain_name: minibox.mosip.net
 site:
