--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
@@ -7,7 +7,7 @@ metadata:
     app: {{ .Values.services.receiver.serviceName }}
     
 spec:
-  replicas: 1
+  replicas: {{ .Values.services.receiver.podconfig.replicas }}
   selector:
     matchLabels:
       app: {{ .Values.services.receiver.serviceName }} 
